RESOLVED FIXED181068
[Attachment Support] Attachment replacement logic should not depend on subresource URL attribute replacement
https://bugs.webkit.org/show_bug.cgi?id=181068
Summary [Attachment Support] Attachment replacement logic should not depend on subres...
Wenson Hsieh
Reported 2017-12-20 16:58:19 PST
Currently, we always replace subresource URLs with blob URLs when reading web content. We want to revert this policy; however, logic to replace DOM elements in the rich fragment with attachments currently depends on us always replacing subresources with blobs. This means we need to decouple logic for replacing attachments from logic that replaces resource URLs in element attributes with blob URLs.
Attachments
First pass (23.39 KB, patch)
2017-12-20 17:26 PST, Wenson Hsieh
no flags
Minor adjustments. (22.98 KB, patch)
2017-12-20 17:32 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2017-12-20 17:10:20 PST
Wenson Hsieh
Comment 2 2017-12-20 17:26:47 PST
Created attachment 329972 [details] First pass
Wenson Hsieh
Comment 3 2017-12-20 17:32:47 PST
Created attachment 329975 [details] Minor adjustments.
Ryosuke Niwa
Comment 4 2017-12-20 19:32:23 PST
Comment on attachment 329975 [details] Minor adjustments. r=me. Thanks for the refactoring!
WebKit Commit Bot
Comment 5 2017-12-20 19:50:20 PST
Comment on attachment 329975 [details] Minor adjustments. Clearing flags on attachment: 329975 Committed r226213: <https://trac.webkit.org/changeset/226213>
WebKit Commit Bot
Comment 6 2017-12-20 19:50:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.