[Attachment Support] Attachment replacement logic should not depend on subresource URL attribute replacement https://bugs.webkit.org/show_bug.cgi?id=181068 <rdar://problem/36168313>

Reviewed by Ryosuke Niwa.

Refactors attachment replacement logic, so that it doesn't require us to first replace element attributes that
contain subresource URLs with blob URLs before performing attachment element replacement. See below comments for
more detail.

Covered by existing API tests in WKAttachmentTests.

* editing/WebContentReader.h:
(WebCore::BlobReplacementInfo::isEmpty const): Deleted.

Remove BlobReplacementInfo. Instead, augment `replaceRichContentWithAttachments` so that it takes in the list of
subresources directly and generates blobs for each subresource.

* editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::replaceSelectionWithAttributedString):
* editing/cocoa/WebContentReaderCocoa.mm:
(WebCore::shouldReplaceRichContentWithAttachments):
(WebCore::createFragmentForImageAttachment):
(WebCore::replaceRichContentWithAttachments):
(WebCore::createFragmentAndAddResources):
(WebCore::sanitizeMarkupWithArchive):

In these helper functions that currently convert subresource URLs to blob URLs, if attachment elements are not
defined out, and the runtime feature for attachment elements is enabled, then use an alternate codepath to
adjust the markup (via replaceRichContentWithAttachments).

Otherwise, fall back to default subresource URL conversion logic, which (at the moment) still converts
subresources to blobs, but will soon be changed to emit data URLs instead.

(WebCore::WebContentReader::readWebArchive):
(WebCore::WebContentMarkupReader::readWebArchive):
(WebCore::WebContentReader::readRTFD):
(WebCore::WebContentMarkupReader::readRTFD):
(WebCore::WebContentReader::readRTF):
(WebCore::WebContentMarkupReader::readRTF):
(WebCore::WebContentReader::readImage):

Remove the createFragmentFromAttributedString helper and revert to just calling createFragmentAndAddResources.

(WebCore::createFragmentFromAttributedString): Deleted.


Canonical link: https://commits.webkit.org/196937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226213 268f45cc-cd09-0410-ab3c-d52691b4dbfc